--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
     />
     <title>Wedding Windy Maldini</title>
     <meta property="og:image" content="/og-image.jpg" />
+    <meta
+      name="description"
+      content="Untuk teman-teman sekalian, pada tanggal 2 juni 2024. Kami akan melangsungkan pernikahan, oleh karena itu kami ingin teman-teman sekalian hadir di hari bahagia kami."
+    />
+    <meta
+      property="og:description"
+      content="Untuk teman-teman sekalian, pada tanggal 2 juni 2024. Kami akan melangsungkan pernikahan, oleh karena itu kami ingin teman-teman sekalian hadir di hari bahagia kami."
+    />
   </head>
   <body>
     <div id="root"></div>
